--- a/htwoo-core/src/styles/03-organism/dialog/_dialog.scss
+++ b/htwoo-core/src/styles/03-organism/dialog/_dialog.scss
@@ -4,7 +4,7 @@
 .hoo-dialog {
     &::backdrop {
         opacity: 0.75;
-        background-image: linear-gradient(45deg, magenta, rebeccapurple, dodgerblue, green);
+
     }
 }
 
@@ -44,6 +44,8 @@
 
     border: 0;
     border-radius: 0.5rem;
+    background-color: colors.$neutral-000;
+    color: colors.$neutral-700;
 
     .hoo-dlgcontent {
         width: 100%;
